--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 
   <link rel="stylesheet" href="reset.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="base.css">
   <link rel="stylesheet" href="style.css">
 
@@ -16,7 +21,94 @@
 </head>
 
 <body id="body">
+  <section>
+    <input type="radio" name="mode" id="form-mode" hidden checked!>
+
+    <form action="javascript:" id="new-game-form">
+      <table>
+        <thead>
+          <tr>
+            <th></th>
+            <th>width</th>
+            <th>height</th>
+            <th>mines</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <label>
+                <input type="radio" name="difficulty" value="9x9/10">
+                Beginner
+              </label>
+            </td>
+            <td>9</td>
+            <td>9</td>
+            <td>10</td>
+          </tr>
+          <tr>
+            <td>
+              <label>
+                <input type="radio" name="difficulty" value="16x16/40" checked>
+                Intermediate
+              </label>
+            </td>
+            <td>16</td>
+            <td>16</td>
+            <td>40</td>
+          </tr>
+          <tr>
+            <td>
+              <label>
+                <input type="radio" name="difficulty" value="16x13/99">
+                Expert
+              </label>
+            </td>
+            <td>30</td>
+            <td>16</td>
+            <td>99</td>
+          </tr>
+          <tr>
+            <td>
+              <label>
+                <input id="custom-difficulty-radio" type="radio" name="difficulty" value="30x20/100">
+                Custom
+              </label>
+            </td>
+            <td>
+              <input id="width-input" type="number" name="width" min="7" max="" value="30">
+            </td>
+            <td>
+              <input id="height-input" type="number" name="height" min="7" max="" value="20">
+            </td>
+            <td>
+              <input id="mine-count-input" type="number" name="mines" min="4" max="" value="100">
+            </td>
+          </tr>
+        </tbody>
+      </table>
   
+      <button>
+        <label for="game-mode">Start New Game</label>
+      </button>
+    </form>
+  </section>
+
+  <main>
+    <input type="radio" name="mode" id="game-mode" hidden checked>
+
+    <header>
+      <output id="mine-counter">888</output>
+      <button id="restart-btn">
+        <label for="form-mode">😀</label>
+      </button>
+      <output id="timer">888</output>
+    </header>
+
+    <table id="board">
+      <tbody></tbody>
+    </table>
+  </main>
 </body>
 
 </html>
