get first board click

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <link rel="stylesheet" href="base.css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="temp.css">
 
   <!-- <script src="script.js" defer></script> -->
   <script src="app.js" type="module"></script>
@@ -22,7 +23,7 @@
 
 <body id="body">
   <section>
-    <input type="radio" name="mode" id="form-mode" hidden checked!>
+    <input type="radio" name="mode" id="form-mode" hidden checked>
 
     <form action="javascript:" id="new-game-form">
       <table>
@@ -95,7 +96,7 @@
   </section>
 
   <main>
-    <input type="radio" name="mode" id="game-mode" hidden checked>
+    <input type="radio" name="mode" id="game-mode" hidden checked!>
 
     <header>
       <output id="mine-counter">888</output>
