--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="base.css">
+  <link rel="stylesheet" href="tiles.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="temp.css">
 
